# bratan-tracker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.js  catalog.json  catalog.schema.json  index.html  styles.css  sw.js
.github/workflows/: release.yml
desktop/: contacts.js  identity.js  main.js  package-lock.json  package.json  preload.js  relay.js  seeds.js  share.js
desktop/renderer/: index.html  renderer.js  styles.css
server/: .dockerignore  Dockerfile  README.md  fly.toml  index.js  package-lock.json  package.json  pyproject.toml
server/app/: auth.py  main.py
